...
  </ul>
</p>
<p>%1$s is produced by Mozilla. Our mission is to foster a healthy, open Internet.<br/>
<a href="%2$s">Learn more</a></p>]]></string>

    <!-- Header for the Privacy and Security settings menu -->
    <string name="preference_privacy_and_security_header">Privacy &amp; Security</string>

    <!-- Preference summary for settings related to privacy and security -->
    <string name="preference_privacy_and_security_summary">Tracking, cookies, data choices</string>

    <!-- Preference category description for settings related to search, set default
    and autocomplete are settings a user can find and change inside the "search" settings screen -->
...
    <!-- Preference summary for General Settings category; the two things users can find in this category -->
    <string name="preference_general_summary2">Default browser, language</string>

    <!-- Preference category for settings about sending usage data -->
    <string name="preference_category_data_collection_use">Data Collection &amp; Use</string>

    <string name="preference_category_search">Search</string>

    <!-- Title of "switch" preference that enables/disables search suggestions -->
    <string name="preference_show_search_suggestions">Get search suggestions</string>
    <!-- Description of the preference that enables/disables search suggestions
        %1$s will be replaced by the app name (e.g. Firefox Focus) -->
    <string name="preference_show_search_suggestions_summary">%1$s will send what you type in the address bar to your search engine</string>

    <!-- This label is shown below the name of the default search engine in settings -->
    <string name="preference_search_engine_default">Default</string>

    <!-- This label is shown above the currently selected search engine in settings -->
    <string name="preference_search_engine_label">Search engine</string>

    <!-- Text that is shown below a "switch" preference that is enabled. -->
    <string name="preference_state_on">On</string>

    <!-- Text that is shown below a "switch" preference that is disabled. -->
    <string name="preference_state_off">Off</string>
...
    <string name="open_source_licenses_title">%s | OSS Libraries</string>

    <!-- Item in Preferences that shows the about page. %1$s is the name of the app (for example "Firefox Focus" or "Firefox Klar"). -->
    <string name="preference_about">About %1$s</string>

    <!-- Header for the list of installed search engines -->
    <string name="preference_search_installed_search_engines">Installed search engines</string>

    <!-- Header for the list of installed search engines -->
    <string name="preference_choose_search_engine">Choose search engine</string>

    <!-- Action for restoring the default list of search engines -->
    <string name="preference_search_restore">Restore default search engines</string>

    <!-- Action for adding an additional search engine to the list.
    The "+" is used to emphasize that this is an "add" action -->
    <string name="preference_search_add2">+ Add another search engine</string>
    <string name="preference_search_remove_title">Remove search engines</string>
    <string name="preference_search_remove">Remove</string>
    <!-- Action for dding an additional search engine to the list -->
    <string name="preference_search_add3">Add another search engine</string>
    <!-- Explanation text above the list of search engines-->
    <string name="preference_select_preferred_engine">Select your preferred engine:</string>
...
    * To understand what notification channels are, see: https://www.androidcentral.com/notification-channels
    * To see how this string will look like in Android's UI, see: https://github.com/mozilla-mobile/focus-android/issues/863#issuecomment-324105723
    -->
    <string name="notification_browsing_session_channel_description">Notifications let you erase your %1$s session with a tap. You don’t need to open the app or see what’s running in your browser.</string>

    <!-- Label for a button in the "tabs tray" to erase the browsing history (closes all tabs and removes associated data). -->
    <string name="tabs_tray_action_erase">Erase browsing history</string>

    <!-- Label for the option in the Focus "tabs tray" to clos the other tabs except the current tab. -->
    <string name="tabs_tray_action_erase_other">Close other tabs</string>

    <!-- If the user decides to open the current page in another browser and if Firefox is not installed then we show this
      item in the list of browsers. Clicking it will open the app store installed on the device (usually that's Google Play). -->
...
    <string name="cookie_banner_the_site_was_reported">Request to support site submitted.</string>

    <!-- Contextual Feature Recommendation Popups -->
    <!-- CFR for Cookie Banner (Banner Info Message). %1$s will be replaced by the app name, %2$s will be an active link using the string cfr_cookie_banner_link as text. -->
    <string name="cfr_cookie_banner">%1$s tries to reject cookie requests to dismiss annoying cookie banners.\n\nManage cookie banner preferences in %2$s.</string>
    <!-- CFR for Cookie Banner (Banner Info Message). This string is used as text for a link in cfr_cookie_banner and takes the user to the app settings. -->
    <string name="cfr_cookie_banner_link">settings</string>

    <!-- Preference for autoplay -->
    <string name="preference_autoplay">Autoplay</string>

    <!-- Heading for the instructions to allow a permission -->
    <string name="phone_feature_blocked_intro">To allow it:</string>
...
    <!-- Title of the preference to enable "HTTPS-Only" mode -->
    <string name="preference_https_only_title">HTTPS-Only Mode</string>
    <!-- Description of the preference to enable "HTTPS-Only" mode. -->
    <string name="preference_https_only_summary3">Automatically attempts to connect to sites using the HTTPS encryption protocol for increased security.</string>

    <!-- Preference for exceptions tracking protection -->
    <string name="preference_exceptions">Exceptions</string>
    <!-- Description for the exceptions preference screen-->
    <string name="preference_exceptions_description">You have disabled content blocking for these websites.</string>
    <!-- Menu item to remove existing exceptions. -->
    <string name="preference_exceptions_menu_remove">Remove</string>
    <!-- Button to remove all websites from the exception list -->
    <string name="preference_exceptions_remove_all_button_label">Remove all websites</string>
...
