<?xml version="1.0" encoding="utf-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<com.google.android.material.button.MaterialButton
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/removeAllExceptions"
    android:minHeight="48dp"
    android:layout_height="wrap_content"
    style="@style/DestructiveButton"
    android:layout_marginHorizontal="16dp"
    android:text="@string/preferences_passwords_exceptions_remove_all" />
