...
                    android:id="@+id/browserToolbar"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1" />

                <mozilla.components.browser.menu.view.MenuButton
                    android:id="@+id/menuView"
                    android:layout_width="40dp"
                    android:layout_height="56dp" />

            </LinearLayout>

        </FrameLayout>
...
