...
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/enable_search_suggestions_no"
            android:textColor="@color/searchSuggestionPromptButtonTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/enable_search_suggestions_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enable_search_suggestions_button"
            style="@style/MetropolisButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:text="@string/no_suggestions_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dismiss_no_suggestions_message"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:minWidth="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/dismiss_no_suggestions_prompt_button"
...
