...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            app:hintEnabled="false"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_engine_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/accessibility_min_height"
                android:hint="@string/search_add_custom_engine_name_hint_2"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
...
            android:textColorHint="?attr/textSecondary"
            app:hintTextAppearance="@style/EngineTextField"
            app:hintEnabled="false"
            android:paddingBottom="8dp"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_search_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/accessibility_min_height"
                android:hint="@string/search_add_custom_engine_search_string_hint_2"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
...
